--- a/html.html
+++ b/html.html
@@ -22,50 +22,15 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Sneha TK</h1>
-            <h3>
+            <h3>And I'm a</h3>
+            <p>Information Technology graduate looking for a challenging position
+                in a dynamic organization where I can contribute my technical skills,
+                creativity and enthusiasm for problem-solving to drive innovation and
+                deliver high quality software solutions.
+                </p>
+                <div class="home-sci">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                
-            </h3>
+                </div>
         </div>
         
     </section>
